@@ -1,3 +1,7 @@
+2021-04-24  Morten Welinder  <terra@gnome.org>
+
+	* functions.c (translate_cell_format): Improve CELL("format",...)
+
 2021-03-14  Morten Welinder <terra@gnome.org>
 
 	* Release 1.12.49
