@@ -8,6 +8,7 @@ Morten:
 	* Export file:// links to xlsx.  [#569]
 	* Improve handling of invalid formulae from xlsx.  [#574]
 	* Introspection fixes.
+	* Improve CELL("format",...)  [#576]
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.49
